<resources>
    <string name="app_name">云笔记</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_text">云笔记</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="note_content_hint">请在此输入笔记内容</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="note_title_hint">请在此输入笔记标题</string>
    <string name="sync_success">同步成功！</string>
    <string name="check_connect">请检查网络连接！</string>
    <string name="save_success">笔记保存成功</string>
    <string name="no_connect">没有网络连接！！！</string>
    <string name="username_nonblank">对不起，用户名不能为空</string>
    <string name="password_nonblank">对不起，用密码不能为空</string>
    <string name="user_pass_err">用户名或者密码错误！！！</string>
    <string name="del_success">笔记已删除！</string>
    <string name="del_bmob_err">错误！请稍后再试！</string>
    <string name="register_success">注册成功</string>
    <string name="register_err">注册失败！换个用户名试试吧~</string>
    <string name="login_text">登录</string>
    <string name="setting_text_font">字体设置</string>
    <string name="setting_text_message">通知</string>
    <string name="setting_text_about">关于本软件</string>
    <string name="login_out">退出</string>
    <string name="setting_text_exit">退出应用</string>
</resources>
